maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:4: error: not found: type int
      var a:int= random3()
            ^RandomMouseMaze:5: error: type mismatch;
 found   : Unit
 required: Boolean
      if (a=0){
           ^RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Boolean
      else {if (a=1){
                 ^