maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (!estSurBiscuit){
      var a:int= random3()
      if (a=0){
        avance
      }
      else {if (a=1){
        droite;
        avance;
      }
           else {
             gauche;
             avance;
           }}
    }
}